--- a/_config.yml
+++ b/_config.yml
@@ -35,11 +35,11 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Sipping
-  email: sippingcoffeeblack@example.org
+  email: sippingcoffeeblack@gmail.com
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/sippingcoffeeblack
-    - https://twitter.com/sipcoffeeblack
+    - https://x.com/sipcoffeeblack
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
